--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,194 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  -webkit-user-select: none; /* Chrome all / Safari all */
+  -moz-user-select: none; /* Firefox all */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #ece9e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #ffffff,
+    #ece9e6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #ffffff,
+    #ece9e6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  height: 100vh;
+  padding: 32px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#drum-machine {
+  background: #f4f4f5;
+  border-radius: 10px;
+  border: 4px solid rgb(136, 136, 136);
+  padding: 20px;
+  border-top: 0px solid;
+  max-width: 355px;
+  height: 460px;
+  margin: auto;
+  box-shadow: inset 0px -8px 0px #e2e2e2, inset -4px -0px 0px #e2e2e2,
+    3px 5px 8px rgba(0, 0, 0, 0.2);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#display {
+  background: #bdebca;
+  border: 10px solid rgb(136, 136, 136);
+  border-radius: 10px;
+  height: 61px;
+  width: 205px;
+  margin-bottom: 24px;
+  padding: 10px;
+}
+
+.drum-pad-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.drum-pad {
+  position: relative;
+  padding: 0;
+  width: 90px;
+  height: 90px;
+  border: 4px solid;
+  border-color: rgb(136, 136, 136);
+  outline: none;
+  background-color: #f4f5f6;
+  border-radius: 13px;
+  box-shadow: -3px -5px 8px #fff, -1px -3px 3px #fff, -10px 0px 15px #fff,
+    3px 5px 8px rgba(0, 0, 0, 0.2);
+  transition: 0.13s ease-in-out;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.key-shadow-fix {
+  position: absolute;
+  background: transparent;
+  height: 60px;
+  width: 4px;
+  right: 4px;
+  top: 0;
+  transform: translate3d(0px, -5px, 0px);
+  border-top-right-radius: 20px;
+  transition: 0.13s ease-in-out;
+  box-shadow: 4px 0px 0px #e2e2e2;
+}
+
+.drum-pad__content {
+  position: relative;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+
+  box-shadow: inset 0px 9px 0px #f4f5f6, inset 0px -8px 0px #e2e2e2,
+    inset -4px -0px 0px #e2e2e2, 0px -8px 0px #f4f5f6;
+  border-radius: 10px;
+  transition: 0.13s ease-in-out;
+  z-index: 1;
+}
+
+.drum-pad__text {
+  display: flex;
+  transform: translate3d(0px, -4px, 0px);
+  align-self: start;
+  justify-self: end;
+  transition: 0.13s ease-in-out;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin: 0;
+  font-size: 22px;
+  background-color: rgb(56, 40, 71);
+  color: transparent;
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+}
+
+.pressedIn {
+  transform: translate3d(0px, 0px, 0px);
+  box-shadow: none;
+}
+
+.sheet__wrapper {
+  box-shadow: inset 34px 0px #00000052;
+  position: relative;
+  height: 100px;
+  width: 320px;
+  margin: 16px auto 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  overflow: hidden;
+}
+
+.relativeWrapper {
+  position: relative;
+  max-width: 310px;
+  margin: auto;
+}
+
+.sheet__keys {
+  left: 0;
+  font-size: 10px;
+  line-height: 32px;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.note {
+  width: 34px;
+  height: 34px;
+  border-right: 2px solid lightgray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.note--active {
+  background: black;
+  width: 34px;
+  height: 34px;
+}
+
+.score {
+  display: block;
+  max-width: 310px;
+  margin: 16px auto;
+  text-align: center;
+}
+
+.button {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ed3330;
+  padding: 12px;
+  width: 90px;
+  border-radius: 5px;
+  display: inline-block;
+  border: none;
+  transition: all 0.4s ease 0s;
+  margin: 12px;
+}
+
+.button--primary {
+  background: #20bf6b;
+}
+
+.controls {
+  margin: auto;
+  width: 100%;
+  max-width: 310px;
+  display: flex;
+  justify-content: space-between;
 }
